--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/alexeyriver/socks#readme",
   "dependencies": {
+    "@sendgrid/mail": "^7.4.2",
     "bcrypt": "^5.0.0",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
@@ -26,6 +27,7 @@
     "hbs": "^4.1.1",
     "mongoose": "^5.11.15",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.4.18",
     "nodemon": "^2.0.7",
     "session-file-store": "^1.5.0"
   }
